# titanskies-pipeline

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  dagster_instance.yaml  index.html  mkdocs.yml  pyproject.toml  workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
concepts/architecture/: index.html
concepts/system-overview/: index.html
concepts/tempo-product-notes/: index.html
config/: geography_sources.json
dbt/: dbt_project.yml
dbt/macros/: test_coverage_in_unit_interval.sql  test_no_duplicate_grain.sql  test_non_negative_no2.sql
dbt/profiles/: profiles.yml
dbt/seeds/: schema.yml  tempo_no2_contract.csv  tempo_no2_std_contract.csv
development/: index.html
development/changelog/: index.html
development/releasing/: index.html
docs/: index.md
docs/concepts/: architecture.md  system-overview.md  tempo-product-notes.md
docs/development/: changelog.md  index.md  releasing.md
docs/getting-started/: build-geography-artifacts.md  index.md  upgrade-v02.md  upgrade-v03.md  upgrade-v04.md
docs/guides/: backfill-30-days.md  enable-schedule.md  live-readiness.md  query-the-warehouse.md  run-the-pipeline.md  troubleshooting.md
docs/reference/: configuration.md  data-contracts.md  data-dictionary.md  legal.md  naming.md  orchestration.md  scripts.md  warehouse.md
getting-started/: index.html
getting-started/build-geography-artifacts/: index.html
getting-started/upgrade-v02/: index.html
getting-started/upgrade-v03/: index.html
guides/backfill-30-days/: index.html
guides/enable-schedule/: index.html
guides/live-readiness/: index.html
guides/query-the-warehouse/: index.html
guides/run-the-pipeline/: index.html
guides/troubleshooting/: index.html
overrides/partials/: source.html
reference/configuration/: index.html
reference/data-contracts/: index.html
reference/data-dictionary/: index.html
reference/legal/: index.html
reference/naming/: index.html
reference/orchestration/: index.html
reference/scripts/: index.html
reference/warehouse/: index.html
scripts/: _bootstrap.py  build_demo.py  build_region_artifacts.py  compact_warehouse.py  generate_geo_fixtures.py  generate_netcdf_fixtures.py  run_gx_data_quality.py  run_live_smoke.py  seed_dbt_source_freshness.py
search/: search_index.json
tests/: conftest.py  test_ci_workflow.py  test_docs_render.py  test_docs_structure.py  test_makefile.py  test_repo_structure.py  test_secrets_not_committed.py
(+106 files in other folders)
